--- a/autosuspend.vcxproj.filters
+++ b/autosuspend.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="autosuspend.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="args.hxx">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="autosuspend.cpp">
